--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,6 @@
   "dependencies": {
     "bootstrap": "~3.3.1",
     "jquery": "~2.1.1",
-    "less.js": "~2.0.0",
+    "less.js": "~2.0.0"
   }
 }
